[package]
name = "flip"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "flip — dynamic layer-streaming inference engine (Phase 1: storage + VRAM profiling)"
license = "Apache-2.0"

[lib]
name = "flip"
path = "src/lib.rs"

[[bin]]
name = "flip"
path = "src/main.rs"

[features]
default = []
# Enables real CUDA runtime FFI (cudaMemGetInfo / cudaHostAlloc page-locked pinning).
# Requires the CUDA toolkit + `cudart` on the link path. Without it, the crate builds
# and runs with a page-aligned host-memory fallback so Phase 1 is testable off-GPU.
cuda = []

[dependencies]
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
